# marloes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: test-sphinx-release-pypi.disabled  test-sphinx-release-pypi.yml  test.yml
MADreamer/: experiment.py  final.py  plot.py  search.py  test.py  two_search.py
configs/: 3_handler_config.yaml  6_handler_config.yaml  9_handler_config.yaml  baseline_config.yaml  default_config.json  default_config.yaml  dreamer_config.yaml  dyna_config.yaml  dyna_config_12.yaml  dyna_config_6.yaml  january_config.yaml  just_battery_config.yaml  just_solar_config.yaml  new_actor_config.yaml  prioflow_config.yaml  ratio_0_config.yaml  ratio_1_config.yaml  ratio_7_config copy.yaml  simple_config.yaml  simple_setpoint_config.yaml  test_config.yaml
data_scenarios/: default.yaml  noisy_forecast.yaml  sensor_failure.yaml  zero_noise.yaml
docs/: conf.py  index.md
docs/_templates/: custom-model-template.rst  custom-module-template.rst  custom-settings-template.rst
docs/adr/: 0001-record-architecture-decisions.md  0002-battery-default-parameters.md  0003-battery-degradation.md  0004-demand-profiles.md  0005-solar-profiles.md  0006-wind-profiles.md  0007-wind-curtailment.md  0008-noise-dropout.md  0009-emissions.md  0009-emmissions.md  0010-self-sufficiency-reward.md  0011-reward-aggregation.md  0012-electrolyser-params.md  0013-baseline-algorithm-priorities.md  0014-da-sparse-reward.md  0015-battery-parameters.md  0015-forecast-transform.md
experiments/: dyna_analysis.py  dyna_run.py  dyna_run_experiment.py  uid_data.py
grid_search/: config_4agents.json  model.py
gui/: errors.py  eval.py  img.py  loading_screen.py  startup.py  success_screen.py  util.py  visualizer.py
slurm_scripts/: ablation.sh  hyperparameter.sh  paradigm.sh  performance.sh
src/marloes/: factories.py  marloes.py  simulation.py  util.py
test/: test_simulation.py  util.py
test/agents/: test_battery.py  test_demand.py  test_electrolyser.py  test_grid.py  test_solar.py  test_wind.py
test/algorithm/: test_maddpg.py  test_priorities.py  test_ray.py
test/algorithms/: test_dreamer.py  test_dummy.py  test_dyna.py  test_maddpg.py  test_priorities.py  test_replaybuffer.py
test/data/: test_data_util.py  test_replaybuffer.py  test_replaybuffer_v2.py  test_util.py
test/networks/: test_RSSM.py  test_actorcritic.py  test_basenetwork.py  test_configuration.py  test_encoder.py  test_encoder_decoder.py  test_networks_util.py  test_predictors.py  test_validation_layerdetails.py  test_worldmodel.py
test/results/: test_calculator.py  test_extensive_extractor.py  test_extractor_from_files.py  test_extractor_from_model.py  test_saver.py  (+1 more)
validation/: validate_config.py
(+129 files in other folders)
