[tool.poetry]
name = "marloes"
version = "0.1.0"
description = "This Repowered project uses Multi-Agent Reinforcement Learning (MARL) to optimize energy flows in an Energy Hub, aiming to reduce CO₂ emissions through efficient management of multiple energy commodities."
authors = ["Matthiasd23 <matthiasdrijfhout23@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
simon = {version = "^0.2.0", source = "repowered"}
parameterized = "^0.9.0"
torch = "^2.5.1"
scipy = "^1.14.1"
ray = {extras = ["train", "rllib"], version = "^2.39.0"}
tqdm = "^4.67.0"
psutil = "^6.1.0"
pyqt6 = "^6.7.1"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
freezegun = "^1.5.1"
networkx = "^3.4.2"
gymnasium = "^1.0.0"
factory-boy = "^3.3.1"
plotly = "^5.24.1"
kaleido = "0.4.1"

# Optional dependencies
myst-parser = { version = "4.0.1", optional = true }
autodoc_pydantic = { version = "^2.0.0", optional = true }
sphinx = { version = "8.2.1", optional = true }
sphinx-book-theme = { version = "1.1.1", optional = true }

[tool.poetry.extras]
myst_parser = ["myst-parser"]
autodoc_pydantic = ["autodoc_pydantic"]
sphinx = ["sphinx"]
book_theme = ["sphinx-book-theme"]


[[tool.poetry.source]]
name = "repowered"
url = "http://packages.repowered.nl/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src/marloes"]
markers = [
    "slow: marks tests as slow (use --runslow to include)"
]

[virtualenvs]
in-project = true
